@@ -1,3 +1,9 @@
+2006-08-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* NAMESPACE: Corrected namespace to reflect new structure.
+
+	* R/termdocmatrix.R: Adapted for new naming scheme.
+
 2006-08-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/textdoccol.R: Adapted code for new class structure. Wrote
